MOBILE-4842 policy: Fix some colors on dark mode

--- a/src/theme/components/ion-card.scss
+++ b/src/theme/components/ion-card.scss
@@ -37,7 +37,7 @@ ion-card {
         margin: 0px 8px 8px 8px;
 
         ion-button.button {
-            --color: var(--gray-900);
+            --color: var(--text-color);
 
             &.button-outline {
                 --background: transparent;
